@@ -1,3 +1,7 @@
+2010-04-17	Mike Frysinger <vapier.adi@gmail.com>
+
+	* cpu.c: Blackfin ABI requires L registers to be 0 upon function entry.
+
 2010-03-27	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* Makefile.am: Remove unused file.
